acm/odh-edge/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  # edit this to the namespace where the model is deployed
  name: model-to-edge
