acm/odh-edge/base/model-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: model-1
  model-name: tensorflow-housing
spec:
  replicas: 1
  template:
    spec:
      containers:
        - readinessProbe:
            httpGet:
              path: /v2/models/tensorflow-housing/ready
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 8
          terminationMessagePath: /dev/termination-log
          name: model
          livenessProbe:
            httpGet:
              path: /v2/health/live
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 8
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: edge-model-template-image
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
