acm/odh-edge/base/model-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: model-1
spec:
  ports:
    - name: port
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
