acm/odh-edge/base/model-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: model-1
spec:
  to:
    kind: Service
    name: model-1
    weight: 100
  port:
    targetPort: port
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
